Basic Portrayal of GameoflifeBoard in the Browser

--- a/Webservice/Frontend/Game_of_life.html
+++ b/Webservice/Frontend/Game_of_life.html
@@ -10,8 +10,7 @@
 
 <body onload = "buildField()">
     <div id = "wrapper">
-        <canvas id = "Game_of_life">
-            
+        <canvas id = "GOLCanvas">
         </canvas>
         <div id = "Buttons">
 
