Cleanup HTML, Fix Gameoflife js

--- a/Webservice/Frontend/Game_of_life.html
+++ b/Webservice/Frontend/Game_of_life.html
@@ -8,12 +8,12 @@
     <title>Skriptsprachen Ausarbeitung</title>
 </head>
 
-<body onload = "buildField()">
+<body onload = "firstload()">
     <div id = "wrapper">
-        <canvas id = "GOLCanvas">
+        <canvas id = "GOLCanvas" height ="500px" width="500px">
         </canvas>
         <div id = "Buttons">
-
+            <button id = "newDay">Cycle_Day</button>
         </div>
     </div>
 </body>
